[package]
name = "lisp"
version = "0.1.0"
edition = "2021"
description = """
--
Program to parse Lisp pseudo-syntax
Supports the following elements of the syntax
- String (anything encloused between double-quotes)
- Integer
- Float (dot-separated)
- Single line comments (starts with `;;`)
- Multi-line comments (anything between `|#` and `#|`), reflected in AST as Null
- Symbol - antyhing that didn't match to previous few
"""

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
nom = "7.1.3"
rstest = "0.18.2"
